Dedicated endpoint per solution